# autoklik

./: .drone.yml  README.md  pyproject.toml
autoklik/: main.py
minecraft_tools/: __init__.py
tests/: test_main.py
