[tool.poetry]
name = "minecraft-tools"
version = "0.1.0"
description = "Minecraft auto clicker"
authors = ["Magnus Walbeck <mw@mwalbeck.org>"]
readme = "README.md"
repository = "https://git.walbeck.it/mwalbeck/minecraft-tools"
packages = [{ include = "minecraft_tools" }]

[tool.poetry.scripts]
minecraft-tools = "minecraft_tools.__init__:main"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.2"
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
